# cdplot

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pypi.yml  unit-tests.yml
data/: config.toml
python/: __main__.py  config.py  plot.py
python/cdplot/: __init__.py  __main__.py  config.py  data.py  filters.py  plot.py
python/plot_torque_pro/: __init__.py  __main__.py  config.py  data.py  exceptions.py  filters.py  functional.py  plot.py
test/: test_config.py  test_main.py  test_plot.py
