[tool.poetry]
name = "plot-torque-pro"
version = "0.1.0"
description = "Plots sensor data from Torque Pro"
authors = ["Stefan Sullivan <stefan.sullivan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "plot_torque_pro", from = "python" },
]

[tool.poetry.dependencies]
python = "^3.10"
plotly = "^5.18.0"
toml = "^0.10.2"
pandas = "^2.1.4"
jsonschema = "^4.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
