[tool.poetry]
name = "cdplot"
version = "1.0a"
description = "Plots csv data using plotly library"
authors = ["Stefan Sullivan <stefan.sullivan@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "cdplot", from = "python" },
]

[tool.poetry.dependencies]
python = "^3.8"
plotly = "^5"
toml = "^0.10"
pandas = "^2"
jsonschema = "^4"
pyparsing = "^3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.extras]
scipy = ["scipy"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["test"]
